Fix inability to interact with logs, pom and plugin.yml improvements